get handler for checking that equipment_status hasn't order by provided start/end dates
